Modification de la requête pour GET tous les sondages. On a maintenant accès au nombre de question dans le sondage et si le user y a déjà répondu.